Fix playlist display overflow

--- a/css/main.css
+++ b/css/main.css
@@ -97,8 +97,11 @@ body {
 #playlistBox {
 	background-color: #fff;
 	border: 1px solid #ccc;
+	/*overflow: hidden;*/
+	overflow-y: auto;
 }
-
+#playlist {
+}
 .playlist-item {
 	padding: 5px;
 	padding-left: 20px;
